--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://us-cdbr-east-04.cleardb.com/heroku_392a7d45abdafc5?reconnect=true?serverTimezone=GMT-6
-spring.datasource.username=b17abc2112a26f
-spring.datasource.password=731e57ea
+spring.datasource.url=jdbc:mysql://bu1he6a589dxvvyn:gl8vxopdotgoqd6u@uzb4o9e2oe257glt.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/kfm38dglewty2bo5?reconnect=true?serverTimezone=GMT-6
+spring.datasource.username=bu1he6a589dxvvyn
+spring.datasource.password=gl8vxopdotgoqd6u
+
+
+#mysql://bu1he6a589dxvvyn:gl8vxopdotgoqd6u@uzb4o9e2oe257glt.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/kfm38dglewty2bo5
